--- a/public/computer/sem4/homepage.html
+++ b/public/computer/sem4/homepage.html
@@ -5,33 +5,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Diploma GTU I.T Sem-4 Study Material and all GTU Study Material</title>
-    <meta name="description" content="GTU Diploma free sudy Material, GTU IT sem 4 free books">
+    <title>GTU Diploma Computer Sem-4</title>
     <link rel="stylesheet" href="/be619.css">
     <link rel="icon" type="image/x-icon" href="/img/bg.png">
+    <meta name="robots" content="index, follow">
+    <meta name="keywords"
+        content="gtu diploma free books download , sem-4 books  , gtu diploma sem-4 it, GTU, free books , it">
+    <meta name="description"
+        content="Download Free GTU Diploma Computer as well as ALL Branch Books, Syllabus, Practicals, all other study material at one place">
+
 </head>
 
 <body>
-    <div class="mucn675">
-        <div class="mmmcm34"></div>
-    </div>
     <nav id="nav"></nav>
     <header>
-        <h1 class="ph748">Diploma GTU - I.T Sem-4 </h1>
+        <h1 class="ph748"> GTU Diploma Computer Sem-4 </h1>
+
     </header>
-    <!-- navinfo -->
     <div class="nv759">
         <div class="nvl153">
             <a class="nvi751" href="/index.html">Home </a>
             <span class="nvsep729"> / </span>
-            <a id="atnvli953" href="/it/sem4/homepage.html">I.T Sem-4</a>
+            <a id="atnvli953" href="/computer/sem4/homepage.html">Computer Sem-4</a>
         </div>
     </div>
     <main>
         <!-- From  -->
         <span class="infdd">
-            <span class="infsub">From: March-2023</span>
-            <span class="infsub">Branch Code:16</span>
+            <span class="infsub">From: 2022-2023</span>
+            <span class="infsub">Branch Code: 07</span>
         </span>
         <!-- syllabus -->
         <div class="sydrp">
@@ -42,8 +44,9 @@
                         <path fill="currentColor" d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z" />
                     </svg>
                 </span>
+
+
             </span>
-            <h1 class="infsub"></h1>
             <table id="table">
                 <tr>
                     <th class="infsub">
@@ -57,50 +60,61 @@
                     <th>Marks</th>
                 </tr>
                 <tr>
-                    <td>4341601</td>
-
+                    <td>4340701</td>
                     <td>
                         <a class="ssn"
-                            href="https://drive.google.com/uc?export=download&id=1K6vRpaB6BzsHhWgtLwQ4VtpVCQv7P3PO">
-                            Essentials of Digital Marketing
+                            href="https://drive.google.com/uc?export=download&id=1L-yZAifeem4ssWH9Rdi9OUdJMpI2BN7P">
+                            Advanced Object Oriented Programming
                         </a>
                     </td>
                     <td>5</td>
                     <td>150</td>
                 </tr>
                 <tr>
-                    <td>4341602</td>
+                    <td>4340702</td>
                     <td>
                         <a class="ssn"
-                            href="https://drive.google.com/uc?export=download&id=1KEdrmmPpT5CxT_qyEobQ8Pc_IBq9Vj9J">
-                            Object Oriented Programming with JAVA
+                            href="https://drive.google.com/uc?export=download&id=1LC67J6qsRyYJ7EgveDF7v20RpPancjrY">
+                            Introduction to Software Engineering
+                        </a>
+                    </td>
+                    <td>4</td>
+                    <td>150</td>
+                </tr>
+                <tr>
+                    <td>4340703</td>
+                    <td>
+                        <a class="ssn"
+                            href="https://drive.google.com/uc?export=download&id=1LOMEiJkY_g3IU8LdCHQNmtyFmpdB3nwz">
+                            Computer Networking
+                        </a>
+                    </td>
+                    <td>4</td>
+                    <td>150</td>
+                </tr>
+                <tr>
+                    <td>4340704</td>
+                    <td>
+                        <a class="ssn"
+                            href="https://drive.google.com/uc?export=download&id=1LU1-CPrRjVV1LQtKB4u3HIZvRMfJiWVE">
+                            Introduction to Web Development
                         </a>
                     </td>
                     <td>5</td>
                     <td>150</td>
                 </tr>
                 <tr>
-                    <td>4341603</td>
+                    <td>4340705</td>
                     <td>
                         <a class="ssn"
-                            href="https://drive.google.com/uc?export=download&id=1KPmlaoeE9U_Uy6RzJ4xOF6LcQgvNpDJP">
-                            Fundamentals of Machine Learning
+                            href="https://drive.google.com/uc?export=download&id=1LUFaXJhLEAzwnncE0f4m3PA61ZoaeJ3U">
+                            Modern Practical Tools
                         </a>
                     </td>
-                    <td>5</td>
-                    <td>150</td>
-                </tr>
-                <tr>
-                    <td>4341604</td>
-                    <td>
-                        <a class="ssn"
-                            href="https://drive.google.com/uc?export=download&id=1KK3rLfpXaWmZ_dtfS-6VhfVenJK6ifYM">
-                            Web Development using PHP
-                        </a>
-                    </td>
-                    <td>2</td>
+                    <td>1</td>
                     <td>50</td>
                 </tr>
+
                 <tr>
                     <th class="infsub">
                         Elective
@@ -146,10 +160,8 @@
                     <td>2</td>
                     <td>150</td>
                 </tr>
-
             </table>
         </div>
-
 
         <!-- Sem-4 -->
         <!-- Compulsory -->
@@ -157,58 +169,54 @@
             Compulsory
         </h2>
         <div aria-label="main content " class="ab12345">
-            <!-- Essentials of Digital Marketing -->
-            <a href="/it/sem4/essentialsofDigitalmarketing.html">
+            <!-- Advanced Object Oriented Programming  -->
+            <a href="/computer/sem4/AOOP.html">
                 <div class="abc123456">
-                    <div class="img">
-                        <img class="i12345" src="/img/na.webp" alt="" srcset="">
-
-                    </div>
+                    <img class="i12345" src="/img/na.webp" alt="" srcset="">
                     <div class="mali147852">
-                        <h1 class="bn159"> Essentials of Digital Marketing </h1>
-                        <h1 class="d111">4341601</h1>
-                        <h1 class="d212">Credit-5</h1>
-                        <input class="kpb789123" type="button" value="Open">
-
-                    </div>
-
-                </div>
-            </a>
-            <!-- Object Oriented Programming with JAVA -->
-            <a href="/it/sem4/oopwithjava.html">
-                <div class="abc123456">
-                    <img class="i12345" src="/img/035.png" alt="" srcset="">
-                    <div class="mali147852">
-                        <h1 class="bn159"> Object Oriented Programming with JAVA </h1>
-                        <h1 class="d111">4341602</h1>
+                        <h1 class="bn159">Advanced Object Oriented Programming </h1>
+                        <h1 class="d111">4340701</h1>
                         <h1 class="d212">Credit-5</h1>
                         <input class="kpb789123" type="button" value="Open">
                     </div>
-
                 </div>
             </a>
-            <!--  Fundamentals of Machine Learning -->
-            <a href="/it/sem4/fundamentalsofml.html">
+            <!--  Introduction to Software Engineering -->
+            <a href="/computer/sem4/ISE.html">
                 <div class="abc123456">
-                    <img class="i12345" src="/img/na.webp" alt="Image Not Avilable" srcset="">
+                    <img class="i12345" src="/img/na.webp" alt="coverpage">
                     <div class="mali147852">
-                        <h1 class="bn159"> Fundamentals of Machine Learning </h1>
-                        <h1 class="d111">4341603</h1>
-                        <h1 class="d212">Credit-5</h1>
+                        <h1 class="bn159">Introduction to Software Engineering </h1>
+                        <h1 class="d111">4340702</h1>
+                        <h1 class="d212">Credit-4</h1>
                         <input class="kpb789123" type="button" value="Open">
                     </div>
 
 
                 </div>
             </a>
-            <!--  Web Development using PHP -->
-            <a href="/it/sem4/webdevelopmentusingPHP.html">
+            <!--  Computer Networking -->
+            <a href="/computer/sem4/CN.html">
                 <div class="abc123456">
-                    <img class="i12345" src="/img/030.png" alt="" srcset="">
+                    <img class="i12345" src="/img/na.webp" alt="coverpage">
                     <div class="mali147852">
-                        <h1 class="bn159"> Web Development using PHP </h1>
-                        <h1 class="d111">4331604</h1>
-                        <h1 class="d212">Credit-2</h1>
+                        <h1 class="bn159">Computer Networking</h1>
+                        <h1 class="d111">4340703</h1>
+                        <h1 class="d212">Credit-4</h1>
+                        <input class="kpb789123" type="button" value="Open">
+                    </div>
+
+
+                </div>
+            </a>
+            <!-- Introduction to Web Development -->
+            <a href="/computer/sem4/IWD.html">
+                <div class="abc123456">
+                    <img class="i12345" src="/img/na.webp" alt="" srcset="">
+                    <div class="mali147852">
+                        <h1 class="bn159">Introduction to Web Development </h1>
+                        <h1 class="d111">4340704</h1>
+                        <h1 class="d212">Credit-5</h1>
                         <input class="kpb789123" type="button" value="Open">
                     </div>
 
@@ -221,7 +229,9 @@
             Elective
         </h2>
         <div aria-label="main content " class="ab12345">
-        <!-- Essence of Indian Knowledge and Tradition  -->
+
+
+            <!-- Essence of Indian Knowledge and Tradition  -->
             <a href="/it/sem4/EIKT.html">
                 <div class="abc123456">
                     <img class="i12345" src="/img/na.webp" alt="Image Not Avilable" srcset="">
@@ -262,12 +272,14 @@
             Checkout
         </h2>
         <div class="ch1233">
-            <a class="btnch22" href="/it/sem1/homepage.html">Sem-1</a>
-            <a class="btnch22" href="/it/sem2/homepage.html">Sem-2</a>
-            <a class="btnch22" href="/it/sem3/homepage.html">Sem-3</a>
-            <a class="btnch22" href="/it/sem5/homepage.html">Sem-5</a>
-            <a class="btnch22" href="/it/sem6/homepage.html">Sem-6</a>
+            <a class="btnch22" href="/computer/sem1/homepage.html">Sem-1</a>
+            <a class="btnch22" href="/computer/sem2/homepage.html">Sem-2</a>
+            <a class="btnch22" href="/computer/sem3/homepage.html">Sem-3</a>
+            <a class="btnch22" href="/computer/sem5/homepage.html">Sem-5</a>
+            <a class="btnch22" href="/computer/sem6/homepage.html">Sem-6</a>
         </div>
+
+
     </main>
     <footer id="footer"></footer>
 </body>
