--- a/public/computer/sem1/environmentandsustainability.html
+++ b/public/computer/sem1/environmentandsustainability.html
@@ -111,7 +111,33 @@
 
             </div>
         </a>
+        <!--  FOEE -->
+        <a href="/computer/sem1/foee.html">
+            <div class="abc123456">
+                <img class="i12345" src="/img/018.png" alt="coverpage">
+                <div class="mali147852">
+                    <h1 class="bn159">Fundamentals of Electrical and Electronics</h1>
+                    <h1 class="d111">4300018</h1>
+                    <h1 class="d212">Credit-4</h1>
+                    <input class="kpb789123" type="button" value="Open">
+                </div>
 
+            </div>
+            </a>
+            <!-- English -->
+            <a href="/computer/sem1/english.html">
+                <div class="abc123456">
+                    <img class="i12345" src="/img/014.png" alt="" srcset="">
+                    <div class="mali147852">
+                        <h1 class="bn159">Communication Skills in English </h1>
+                        <h1 class="d111">4300002</h1>
+                        <h1 class="d212">Credit-3</h1>
+                        <input class="kpb789123" type="button" value="Open">
+                    </div>
+            
+            
+                </div>
+            </a>
         <!-- Maths  -->
         <a href="/computer/sem1/mathematics.html">
             <div class="abc123456">
@@ -126,46 +152,99 @@
             </div>
         </a>
     </div>
+    <!-- Sem-2 -->
+    <h1 class="kl789123">
+        Semester-2
+    </h1>
+    <div aria-label="main content " class="ab12345">
+        <!-- Physics -->
+        <a href="/computer/sem1/physics.html">
+            <div class="abc123456">
+                <img class="i12345" src="/img/019.png" alt="" srcset="">
+                <div class="mali147852">
+                    <h1 class="bn159">Physics </h1>
+                    <h1 class="d111">C4300005</h1>
+                    <h1 class="d212">Credit-4</h1>
+                    <input class="kpb789123" type="button" value="Open">
+                </div>
+            </div>
+            </a>
+            <!--  Engineering Mathematics -->
+            <a href="/computer/sem1/engineeringmathematics.html">
+                <div class="abc123456">
+                    <img class="i12345" src="/img/022.png" alt="coverpage">
+                <div class="mali147852">
+                    <h1 class="bn159"> Engineering Mathematics</h1>
+                    <h1 class="d111">C4320002</h1>
+                    <h1 class="d212">Credit-4</h1>
+                    <input class="kpb789123" type="button" value="Open">
+                    </div>
+                    </div>
+                    </a>
+                    <!--  Basic Object Oriented Programming -->
+                    <a href="/computer/sem1/BOOP.html">
+                        <div class="abc123456">
+                            <img class="i12345" src="/img/029.png" alt="coverpage">
+                            <div class="mali147852">
+                                <h1 class="bn159">Basic Object Oriented Programming</h1>
+                                <h1 class="d111">C4320702</h1>
+                    <h1 class="d212">Credit-5</h1>
+                    <input class="kpb789123" type="button" value="Open">
+                </div>
+            </div>
+        </a>
+        <!-- Basics of Digital Electronics -->
+        <a href="/computer/sem1/BDE.html">
+            <div class="abc123456">
+                <img class="i12345" src="/img/008.png" alt="" srcset="">
+                <div class="mali147852">
+                    <h1 class="bn159">Basics of Digital Electronics </h1>
+                    <h1 class="d111">C4320703</h1>
+                    <h1 class="d212">Credit-5</h1>
+                    <input class="kpb789123" type="button" value="Open">
+                </div>
+            </div>
+            </a>
+
+    </div>
     <!-- Sem-3 -->
-    <h1 class="kl789123">Semester-3</h1>
-    <div class="ab12345">
-        <!-- Data Structure with Python -->
-        <a href="/it3/sem3/datastructurewithpython.html">
+    <h1 class="kl789123">
+        Semester-3
+    </h1>
+    <div aria-label="main content " class="ab12345">
+        <!-- Scripting Language -Python  -->
+        <a href="/computer/sem3/SLP.html">
             <div class="abc123456">
-                <div class="img">
-                    <img class="i12345" src="/img/na.webp" alt="coverpage">
-
-                </div>
+                <img class="i12345" src="/img/na.webp" alt="" srcset="">
                 <div class="mali147852">
-                    <h1 class="bn159"> Data Structure with Python </h1>
-                    <h1 class="d111">4330001</h1>
+                    <h1 class="bn159">Scripting Language -Python </h1>
+                    <h1 class="d111">4330701</h1>
                     <h1 class="d212">Credit-5</h1>
                     <input class="kpb789123" type="button" value="Open">
-
                 </div>
-
             </div>
         </a>
-        <!-- Database Management -->
-        <a href="/it3/sem3/databasemanagement.html">
+        <!--  BCP -->
+        <a href="/computer/sem3/RDBMS.html">
             <div class="abc123456">
-                <img class="i12345" src="/img/035.png" alt="coverpage">
+                <img class="i12345" src="/img/038.png" alt="coverpage">
                 <div class="mali147852">
-                    <h1 class="bn159"> Database Management </h1>
-                    <h1 class="d111">4331603</h1>
+                    <h1 class="bn159"> Relational Database Management System</h1>
+                    <h1 class="d111">4330702</h1>
                     <h1 class="d212">Credit-5</h1>
                     <input class="kpb789123" type="button" value="Open">
                 </div>
 
+
             </div>
         </a>
-        <!--  Linux Operating System -->
-        <a href="/it3/sem3/linuxoperatingsystem.html">
+        <!--  Basics of Operating System -->
+        <a href="/computer/sem3/BOS.html">
             <div class="abc123456">
-                <img class="i12345" src="/img/036.png" alt="Image Not Avilable">
+                <img class="i12345" src="/img/039.png" alt="coverpage">
                 <div class="mali147852">
-                    <h1 class="bn159"> Linux Operating System </h1>
-                    <h1 class="d111">4331602</h1>
+                    <h1 class="bn159">Basics of Operating System</h1>
+                    <h1 class="d111">4330703</h1>
                     <h1 class="d212">Credit-4</h1>
                     <input class="kpb789123" type="button" value="Open">
                 </div>
@@ -173,14 +252,14 @@
 
             </div>
         </a>
-        <!--  Fundamentals of Software Development -->
-        <a href="/it3/sem3/fundamentalofsoftwaredevelopment.html">
+        <!-- Data Structures and Algorithms -->
+        <a href="/computer/sem3/DSA.html">
             <div class="abc123456">
-                <img class="i12345" src="/img/030.png" alt="coverpage">
+                <img class="i12345" src="/img/na.webp" alt="" srcset="">
                 <div class="mali147852">
-                    <h1 class="bn159"> Fundamentals of Software Development </h1>
-                    <h1 class="d111">4331604</h1>
-                    <h1 class="d212">Credit-4</h1>
+                    <h1 class="bn159">Data Structures and Algorithms </h1>
+                    <h1 class="d111">4330704</h1>
+                    <h1 class="d212">Credit-5</h1>
                     <input class="kpb789123" type="button" value="Open">
                 </div>
 
@@ -188,46 +267,34 @@
             </div>
         </a>
     </div>
-    <!-- Sem-1 -->
-    <h1 class="kl789123">Semester-1</h1>
-    <div class="ab12345">
-        <!-- python-->
-        <a href="/it/sem1/pythonprogramming.html">
+    <!-- Sem-4 -->
+    <h1 class="kl789123">
+        Semester-4
+    </h1>
+    <!-- Compulsory -->
+    <h2 class="kl789123">
+        Compulsory
+    </h2>
+    <div aria-label="main content " class="ab12345">
+        <!-- Advanced Object Oriented Programming  -->
+        <a href="/computer/sem4/AOOP.html">
             <div class="abc123456">
-                <div class="img">
-                    <img class="i12345" src="/img/013.png" alt="coverpage">
-                </div>
+                <img class="i12345" src="/img/na.webp" alt="" srcset="">
                 <div class="mali147852">
-                    <h1 class="bn159">Python Programming </h1>
-                    <h1 class="d111">4311601</h1>
+                    <h1 class="bn159">Advanced Object Oriented Programming </h1>
+                    <h1 class="d111">4340701</h1>
                     <h1 class="d212">Credit-5</h1>
                     <input class="kpb789123" type="button" value="Open">
                 </div>
-
             </div>
         </a>
-        <!-- IT SYS -->
-        <a href="/it/sem1/introductiontoitsystem.html">
+        <!--  Introduction to Software Engineering -->
+        <a href="/computer/sem4/ISE.html">
             <div class="abc123456">
-                <div class="img">
-                    <img class="i12345" src="/img/007.png" alt="coverpage">
-                </div>
+                <img class="i12345" src="/img/na.webp" alt="coverpage">
                 <div class="mali147852">
-                    <h1 class="bn159">Introduction to IT Systems </h1>
-                    <h1 class="d111">4311602</h1>
-                    <h1 class="d212">Credit-5</h1>
-                    <input class="kpb789123" type="button" value="Open">
-                </div>
-
-            </div>
-        </a>
-        <!-- Maths -->
-        <a href="/it/sem1/mathematics.html">
-            <div class="abc123456">
-                <img class="i12345" src="/img/008.png" alt="coverpage">
-                <div class="mali147852">
-                    <h1 class="bn159">Mathematics </h1>
-                    <h1 class="d111">4300001</h1>
+                    <h1 class="bn159">Introduction to Software Engineering </h1>
+                    <h1 class="d111">4340702</h1>
                     <h1 class="d212">Credit-4</h1>
                     <input class="kpb789123" type="button" value="Open">
                 </div>
@@ -235,21 +302,76 @@
 
             </div>
         </a>
-        <!-- English -->
-        <a href="/it/sem1/english.html">
+        <!--  Computer Networking -->
+        <a href="/computer/sem4/CN.html">
             <div class="abc123456">
-                <img class="i12345" src="/img/014.png" alt="coverpage">
+                <img class="i12345" src="/img/na.webp" alt="coverpage">
                 <div class="mali147852">
-                    <h1 class="bn159">Communication Skills in English </h1>
-                    <h1 class="d111">4300002</h1>
-                    <h1 class="d212">Credit-3</h1>
+                    <h1 class="bn159">Computer Networking</h1>
+                    <h1 class="d111">4340703</h1>
+                    <h1 class="d212">Credit-4</h1>
                     <input class="kpb789123" type="button" value="Open">
                 </div>
 
 
             </div>
+            </a>
+            <!-- Introduction to Web Development -->
+            <a href="/computer/sem4/IWD.html">
+                <div class="abc123456">
+                    <img class="i12345" src="/img/na.webp" alt="" srcset="">
+                    <div class="mali147852">
+                        <h1 class="bn159">Introduction to Web Development </h1>
+                        <h1 class="d111">4340704</h1>
+                        <h1 class="d212">Credit-5</h1>
+                        <input class="kpb789123" type="button" value="Open">
+                    </div>
+                </div>
+            </a>
+            </div>
+            <!-- Elective -->
+            <h2 class="kl789123">
+                Elective
+            </h2>
+            <div aria-label="main content " class="ab12345">
+                <!-- Essence of Indian Knowledge and Tradition  -->
+                <a href="/it/sem4/EIKT.html">
+                    <div class="abc123456">
+                        <img class="i12345" src="/img/na.webp" alt="Image Not Avilable" srcset="">
+                        <div class="mali147852">
+                            <h1 class="bn159">Essence of Indian Knowledge and Tradition</h1>
+                            <h1 class="d111">4340001</h1>
+                            <h1 class="d212">Credit-2</h1>
+                            <input class="kpb789123" type="button" value="Open">
+                        </div>
+                    </div>
+                </a>
+                <!--Contributor Personality Development  -->
+                <a href="/it/sem4/CPD.html">
+                    <div class="abc123456">
+                        <img class="i12345" src="/img/na.webp" alt="Image Not Avilable" srcset="">
+                        <div class="mali147852">
+                            <h1 class="bn159">Contributor Personality Development</h1>
+                            <h1 class="d111">4340002</h1>
+                            <h1 class="d212">Credit-2</h1>
+                            <input class="kpb789123" type="button" value="Open">
+                        </div>
+                    </div>
+                </a>
+                <!--Integrated Personality Development Course  -->
+                <a href="/it/sem4/IPDC.html">
+                    <div class="abc123456">
+                        <img class="i12345" src="/img/na.webp" alt="Image Not Avilable" srcset="">
+                        <div class="mali147852">
+                            <h1 class="bn159">Integrated Personality Development Course</h1>
+                            <h1 class="d111">4340003</h1>
+                            <h1 class="d212">Credit-2</h1>
+                            <input class="kpb789123" type="button" value="Open">
+                        </div>
+            </div>
         </a>
     </div>
+
     <!-- Footer -->
     <footer id="footer">
     </footer>
