--- a/public/computer/sem3/homepage.html
+++ b/public/computer/sem3/homepage.html
@@ -138,9 +138,9 @@
                 </div>
             </a>
             <!--  BCP -->
-            <a href="/computer/sem3/BCP.html">
+            <a href="/computer/sem3/RDBMS.html">
                 <div class="abc123456">
-                    <img class="i12345" src="/img/002.png" alt="coverpage">
+                    <img class="i12345" src="/img/038.png" alt="coverpage">
                     <div class="mali147852">
                         <h1 class="bn159"> Relational Database Management System</h1>
                         <h1 class="d111">4330702</h1>
@@ -151,13 +151,13 @@
 
                 </div>
             </a>
-            <!--  FOEE -->
-            <a href="/computer/sem3/foee.html">
+            <!--  Basics of Operating System -->
+            <a href="/computer/sem3/BOS.html">
                 <div class="abc123456">
-                    <img class="i12345" src="/img/018.png" alt="coverpage">
+                    <img class="i12345" src="/img/039.png" alt="coverpage">
                     <div class="mali147852">
-                        <h1 class="bn159">Fundamentals of Electrical and Electronics</h1>
-                        <h1 class="d111">4300018</h1>
+                        <h1 class="bn159">Basics of Operating System</h1>
+                        <h1 class="d111">4330703</h1>
                         <h1 class="d212">Credit-4</h1>
                         <input class="kpb789123" type="button" value="Open">
                     </div>
@@ -165,28 +165,14 @@
 
                 </div>
             </a>
-            <!-- Maths -->
-            <a href="/computer/sem3/mathematics.html">
+            <!-- Data Structures and Algorithms -->
+            <a href="/computer/sem3/DSA.html">
                 <div class="abc123456">
-                    <img class="i12345" src="/img/008.png" alt="" srcset="">
+                    <img class="i12345" src="/img/na.webp" alt="" srcset="">
                     <div class="mali147852">
-                        <h1 class="bn159">Mathematics </h1>
-                        <h1 class="d111">4300001</h1>
-                        <h1 class="d212">Credit-4</h1>
-                        <input class="kpb789123" type="button" value="Open">
-                    </div>
-
-
-                </div>
-            </a>
-            <!-- English -->
-            <a href="/computer/sem3/english.html">
-                <div class="abc123456">
-                    <img class="i12345" src="/img/014.png" alt="" srcset="">
-                    <div class="mali147852">
-                        <h1 class="bn159">Communication Skills in English </h1>
-                        <h1 class="d111">4300002</h1>
-                        <h1 class="d212">Credit-3</h1>
+                        <h1 class="bn159">Data Structures and Algorithms </h1>
+                        <h1 class="d111">4330704</h1>
+                        <h1 class="d212">Credit-5</h1>
                         <input class="kpb789123" type="button" value="Open">
                     </div>
 
@@ -198,7 +184,7 @@
             Checkout
         </h2>
         <div class="ch1233">
-            <a class="btnch22" href="/computer/sem1/homepage.html">Sem-3</a>
+            <a class="btnch22" href="/computer/sem1/homepage.html">Sem-1</a>
             <a class="btnch22" href="/computer/sem2/homepage.html">Sem-2</a>
             <a class="btnch22" href="/computer/sem4/homepage.html">Sem-4</a>
             <a class="btnch22" href="/computer/sem5/homepage.html">Sem-5</a>
