--- a/public/computer/sem1/environmentandsustainability.html
+++ b/public/computer/sem1/environmentandsustainability.html
@@ -8,10 +8,10 @@
         content="gtu diploma sem-1 books download , 4320005 ,ES,Environment and Sustainability download for free , Computer">
     <meta name="audience" content="Everyone">
     <meta name="description"
-        content=" Environment and Sustainability Sem-1 book Free Download | Computer Sem-1 All Study Material free | Get GTU Diploma Computer books free download |Sem-1 Diploma Engineering">
+        content=" Environment and Sustainability Sem-1 book Free Download,  Computer Sem-1 All Study Material free,  Get GTU Diploma Computer books free download, Sem-1 Diploma Engineering">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IT Diploma Environment and Sustainability - KhudKibook </title>
+    <title>Computer Diploma Environment and Sustainability - KhudKibook GTU </title>
     <link rel="icon" type="image/x-icon" href="/img/bg.png">
     <link rel="stylesheet" href="/cd651.css">
     <link rel="stylesheet" href="/be619.css">
@@ -273,7 +273,7 @@
     </h1>
     <!-- Compulsory -->
     <h2 class="kl789123">
-        Compulsory
+        Compulsory (Sem-4)
     </h2>
     <div aria-label="main content " class="ab12345">
         <!-- Advanced Object Oriented Programming  -->
@@ -331,7 +331,7 @@
         </div>
         <!-- Elective -->
         <h2 class="kl789123">
-            Elective
+            Elective (Sem-4)
         </h2>
         <div aria-label="main content " class="ab12345">
             <!-- Essence of Indian Knowledge and Tradition  -->
