--- a/public/computer/sem2/BDE.html
+++ b/public/computer/sem2/BDE.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="robots" content="index, follow">
     <meta name="keywords"
-        content="gtu diploma sem-1 books download , 4300002 ,English,English download for free , Computer">
+        content="gtu diploma sem-2 books download , C4320703 ,BDE,Basics of Digital Electronics download for free , Computer">
     <meta name="audience" content="Everyone">
     <meta name="description"
-        content=" English Sem-1 book Free Download, Computer Sem-1 All Study Material free, Get GTU Diploma Computer books free download, Sem-1 Diploma Engineering">
+        content=" Basics of Digital Electronics  Sem-2 book Free Download, Computer Sem-2 All Study Material free, Get GTU Diploma Computer books free download, Sem-2 Diploma Engineering">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Computer Diploma English - KhudKibook GTU </title>
+    <title>Computer Diploma Basics of Digital Electronics - KhudKibook GTU </title>
     <link rel="icon" type="image/x-icon" href="/img/bg.png">
     <link rel="stylesheet" href="/cd651.css">
     <link rel="stylesheet" href="/be619.css">
@@ -20,36 +20,35 @@
 
 <body>
     <nav id="nav">
-
     </nav>
     <header>
-        <h1 class="ph748">English Study Material </h1>
+        <h1 class="ph748">Basics of Digital Electronics Study Material </h1>
     </header>
     <!-- navinfo -->
     <div class="nv759">
         <div class="nvl153">
             <a class="nvi751" href="/index.html">Home </a>
             <span class="nvsep729"> / </span>
-            <a class="nvi751" href="/computer/sem1/homepage.html">Computer Sem-1 </a>
+            <a class="nvi751" href="/computer/sem2/homepage.html">Computer Sem-2 </a>
             <span class="nvsep729"> / </span>
-            <a id="atnvli953" href="/computer/sem1/english.html">English</a>
+            <a id="atnvli953" href="/computer/sem2/BDE.html">Basics of Digital Electronics </a>
         </div>
     </div>
     <main>
         <div class="mc759351">
 
             <div class="mc7593512">
-                <img class="mc7593512345" src="/img/014.png" alt="Book Photo">
+                <img class="mc7593512345" src="/img/008.png" alt="Book Photo">
             </div>
             <div class="mac75935">
-                <h1 class="bn159">English</h1>
+                <h1 class="bn159">Basics of Digital Electronics </h1>
 
-                <h1 class="md111">4300002</h1>
-                <h1 class="md111">Credit-3</h1>
+                <h1 class="md111">C4320703</h1>
+                <h1 class="md111">Credit-5</h1>
                 <div>
                     <button class="mdbtn" data-modal-id="modal-1">Book</button>
                     <!-- Syllabus -->
-                    <a href="https://drive.google.com/uc?export=download&id=1fTISxvTpFB0sjvTVZjQE_v7-XGWYo6fq">
+                    <a href="https://drive.google.com/uc?export=download&id=14MZpC-GiXQf4Hdk58YAru1pe6dB1T3eM">
                         <button class="mdbtn">Syllabus</button>
                     </a>
                     <!-- Button 2 -->
@@ -68,8 +67,6 @@
                             </a>
                             <a href="https://drive.google.com/uc?export=download&id=">Unit-5
                             </a>
-                            <a href="https://drive.google.com/uc?export=download&id=">Unit-6
-                            </a>
                             <a href="https://drive.google.com/uc?export=download&id=">Full-Book
                             </a>
                         </div>
@@ -78,14 +75,10 @@
                     <div class="m741852" id="modal-2">
                         <div class="mc7913">
                             <span class="mc718293">&times;</span>
-                            <a href="https://drive.google.com/uc?export=download&id=1bZXpB71He2xjgPOYNbI7HmaFVTHhtpx7">2022
+                            <a href="https://drive.google.com/uc?export=download&id=1mT76SmtMYJHcRpTUEHnnYl2NeLE5pkLX">2022
                             </a>
-                            <a href="https://drive.google.com/uc?export=download&id=1zAotD83vv-DYvYdXrPESa9-qB9Aw_nnu">2021
-                            </a>
-
                         </div>
                     </div>
-
 
                 </div>
             </div>
@@ -96,6 +89,49 @@
     <!-- Recommended -->
     <h1 class="kl789123">
         Recommnded Acording to your Semester
+    </h1>
+    <div aria-label="main content " class="ab12345">
+        <!--  Engineering Mathematics -->
+        <a href="/computer/sem2/engineeringmathematics.html">
+            <div class="abc123456">
+                <img class="i12345" src="/img/022.png" alt="coverpage">
+                <div class="mali147852">
+                    <h1 class="bn159"> Engineering Mathematics</h1>
+                    <h1 class="d111">C4320002</h1>
+                    <h1 class="d212">Credit-4</h1>
+                    <input class="kpb789123" type="button" value="Open">
+                </div>
+            </div>
+        </a>
+        <!-- Physics -->
+        <a href="/computer/sem2/physics.html">
+            <div class="abc123456">
+                <img class="i12345" src="/img/019.png" alt="" srcset="">
+                <div class="mali147852">
+                    <h1 class="bn159">Physics </h1>
+                    <h1 class="d111">C4300005</h1>
+                    <h1 class="d212">Credit-4</h1>
+                    <input class="kpb789123" type="button" value="Open">
+                </div>
+            </div>
+        </a>
+        <!--  Basic Object Oriented Programming -->
+        <a href="/computer/sem2/BOOP.html">
+            <div class="abc123456">
+                <img class="i12345" src="/img/029.png" alt="coverpage">
+                <div class="mali147852">
+                    <h1 class="bn159">Basic Object Oriented Programming</h1>
+                    <h1 class="d111">C4320702</h1>
+                    <h1 class="d212">Credit-5</h1>
+                    <input class="kpb789123" type="button" value="Open">
+                </div>
+            </div>
+        </a>
+
+    </div>
+    <!-- Sem-1 -->
+    <h1 class="kl789123">
+        Semester-1
     </h1>
     <div class="ab12345">
         <!-- es -->
@@ -150,62 +186,22 @@
 
             </div>
         </a>
-    </div>
-    <!-- Sem-2 -->
-    <h1 class="kl789123">
-        Semester-2
-    </h1>
-    <div aria-label="main content " class="ab12345">
-        <!-- Physics -->
-        <a href="/computer/sem2/physics.html">
+        <!-- English -->
+        <a href="/computer/sem1/english.html">
             <div class="abc123456">
-                <img class="i12345" src="/img/019.png" alt="" srcset="">
+                <img class="i12345" src="/img/014.png" alt="" srcset="">
                 <div class="mali147852">
-                    <h1 class="bn159">Physics </h1>
-                    <h1 class="d111">C4300005</h1>
-                    <h1 class="d212">Credit-4</h1>
+                    <h1 class="bn159">Communication Skills in English </h1>
+                    <h1 class="d111">4300002</h1>
+                    <h1 class="d212">Credit-3</h1>
                     <input class="kpb789123" type="button" value="Open">
                 </div>
-            </div>
-        </a>
-        <!--  Engineering Mathematics -->
-        <a href="/computer/sem2/engineeringmathematics.html">
-            <div class="abc123456">
-                <img class="i12345" src="/img/022.png" alt="coverpage">
-                <div class="mali147852">
-                    <h1 class="bn159"> Engineering Mathematics</h1>
-                    <h1 class="d111">C4320002</h1>
-                    <h1 class="d212">Credit-4</h1>
-                    <input class="kpb789123" type="button" value="Open">
-                </div>
-            </div>
-        </a>
-        <!--  Basic Object Oriented Programming -->
-        <a href="/computer/sem2/BOOP.html">
-            <div class="abc123456">
-                <img class="i12345" src="/img/029.png" alt="coverpage">
-                <div class="mali147852">
-                    <h1 class="bn159">Basic Object Oriented Programming</h1>
-                    <h1 class="d111">C4320702</h1>
-                    <h1 class="d212">Credit-5</h1>
-                    <input class="kpb789123" type="button" value="Open">
-                </div>
-            </div>
-        </a>
-        <!-- Basics of Digital Electronics -->
-        <a href="/computer/sem2/BDE.html">
-            <div class="abc123456">
-                <img class="i12345" src="/img/008.png" alt="" srcset="">
-                <div class="mali147852">
-                    <h1 class="bn159">Basics of Digital Electronics </h1>
-                    <h1 class="d111">C4320703</h1>
-                    <h1 class="d212">Credit-5</h1>
-                    <input class="kpb789123" type="button" value="Open">
-                </div>
-            </div>
-        </a>
 
+
+            </div>
+        </a>
     </div>
+
     <!-- Sem-3 -->
     <h1 class="kl789123">
         Semester-3
